k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend

        image: antipf-frontend:latest
        imagePullPolicy: Never

        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"

          limits:
            cpu: "250m"
            memory: "256Mi"
