k8s/test-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: storage-test
  namespace: portfolio

spec:
  containers:
  - name: ubuntu
    image: ubuntu
    command: ["sleep","3600"]

    volumeMounts:
    - mountPath: /data
      name: my-storage

  volumes:
  - name: my-storage
    persistentVolumeClaim:
      claimName: test-pvc
